k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: coletaconsciente
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  ingressClassName: ingress
  rules:
    - host: coletaconsciente.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faleconosco
                port:
                  number: 9092
